--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB="mongodb://localhost:27017/test"
-JWT_SECRET="rtesrrrraopdsafmnasdlfklkhklsopspppsodfs"
+DB=mongodb+srv://ramabets:aatczlp2aek_fjt@ramabets.t4xdv0l.mongodb.net/?retryWrites=true&w=majority&appName=ramabets
+JWT_SECRET=rtesrrrraopdsafmnasdlfklkhklsopspppsodfs
