--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "i18next": "^23.11.5",
     "i18next-fs-backend": "^2.3.1",
     "i18next-http-middleware": "^3.6.0",
-    "joi": "^17.13.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "path": "^0.12.7"
   }
 }
