--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "validator": "^13.12.0"
   }
 }
