--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "format": "^0.2.2",
     "i18next": "^23.11.5",
     "i18next-fs-backend": "^2.3.1",
     "i18next-http-middleware": "^3.6.0",
@@ -27,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemon": "^3.1.3",
+    "parse": "^5.3.0",
     "path": "^0.12.7",
     "validator": "^13.12.0"
   }
